packages/webassemblyjs/test/fixtures/type-errors/div-mixed-operators/module.wast
(module 
  (func
    (i32.div_s (i64.const 0) (f32.const 0))
  )
)
